# proper-pixel-art

./: README.md  config.example.yaml  pyproject.toml
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: ci.yml  publish.yml  release.yml
proper_pixel_art/: __init__.py  cli.py  colors.py  config.py  mesh.py  pixelate.py  utils.py  web.py
scripts/: README.md  gen_outputs.py  ppa_gen.py
tests/: cases.py  conftest.py  test_config.py  test_mesh.py  test_pixelate.py  test_visual_output.py
